--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -7,6 +7,7 @@
 
     --page-bg: #f9f9f9;
     --dark-bg: #141416;
+    --accent: #929292;
 
     --text-color: #141416;
     --text-color-muted: #848586;
