--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 45px 0px 118px;
     gap: 30px;
 }
 .nav__logo {
@@ -55,6 +54,13 @@
     font-weight: 500;
     line-height: 1.175; /* 18.461px */
     letter-spacing: -0.314px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    transition: all 0.3s ease-in;
+
+    &:focus {
+        border: 1px solid var(--accent);
+    }
 }
 
 .nav__button {
@@ -69,4 +75,9 @@
     font-weight: 600;
     line-height: 1.5; /* 150% */
     text-transform: uppercase;
+    transition: all 0.3s ease-in;
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
