--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -6,6 +6,8 @@
     --font-numbers: 'Public Sans', sans-serif;
 
     --page-bg: #f9f9f9;
+    --page-bg1: #F1F1F1;
+
     --dark-bg: #141416;
     --accent: #929292;
 
