--- a/src/scss/blocks/_weekly.scss
+++ b/src/scss/blocks/_weekly.scss
@@ -1,7 +1,8 @@
 .weekly {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     padding: 70px 0 90px;
 }
 
@@ -15,13 +16,14 @@
     font-weight: 600;
     line-height: 0.6; /* 59.812% */
 }
+
 .weekly__slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 20px;
+    // display: flex;
+    // flex-shrink: 0;
+    // justify-content: center;
+    // align-items: center;
+    // column-gap: 10px;
     margin-bottom: 115px;
-    
 }
 
 .weekly__btn {
