--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,3 +23,10 @@ body {
 .weekly {
     background-color: var(--page-bg1);
 }
+
+.title-black {
+    color: var(--text-color);
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 600;
+}
