--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -169,7 +169,7 @@
         width: 319.156px;
         height: 322.084px;
 
-        background-image: url('./../../img/discover/rectangle-3-1.png');
+        background-image: url('./../img/discover/rectangle-3-1.png');
         background-repeat: no-repeat;
     }
 }
@@ -184,7 +184,7 @@
         width: 173px;
         height: 192.224px;
 
-        background-image: url('./../../img/discover/dot-ornament.svg');
+        background-image: url('./../img/discover/dot-ornament.svg');
         background-repeat: no-repeat;
     }
 }
