--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -4,26 +4,32 @@
     align-items: center;
     gap: 30px;
 }
-
 .nav__logo {
     flex-shrink: 0; //чтобы не сжимался
 }
-
 .nav__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 53.49px;
+}
+.nav__item {
+    color: #606060;
+    font-family: 'Inter', sans-serif;
+    font-size: 17.829px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 26.743px; /* 150% */
+    text-transform: uppercase;
+    transition: all 0.3s ease-in;
 
-    li a {
-        color: #606060;
-        font-family: 'Inter', sans-serif;
-        font-size: 17.829px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 26.743px; /* 150% */
-        text-transform: uppercase;
+    &:hover {
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
+}
+.nav__item--active {
+    color: #141416;
+    font-weight: 600;
 }
 .nav__form {
     position: relative;
